Fix note block layout break

--- a/general.css
+++ b/general.css
@@ -67,16 +67,18 @@ div.eapsi-esamea ul ul ul {
 
 /* Note block with icon */
 .note {
-    display: flex;
-    align-items: flex-start;
-    gap: 12px;
-    padding-left: 0px;
+    position: relative;
+    padding-left: 32px;
     margin: 20px 0;
-    line-height: 1.5;
+   
 }
 
 .note::before {
     content: "➲" / "Επισήμανση";
+    position: absolute;
+    left: 0;
+    top: 0;
     font-size: 1.2em;
-    flex-shrink: 0;
+    
 }
+
